[package]
name = "async-anthropic"
version = "0.2.1"
edition = "2021"
authors = ["Timon Vonk <timon@bosun.ai>"]
license = "MIT"
homepage = "https://github.com/bosun-ai/async-anthropic"
repository = "https://github.com/bosun-ai/async-anthropic"
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["llm", "anthropic", "ai", "gpt", "claude"]
description = "Anthropic Rust Client."
readme = "README.md"

[dependencies]
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
derive_builder = "0.20.2"
tracing = "0.1.41"
secrecy = "0.10.3"
backoff = { version = "0.4", features = ["futures", "tokio"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6.2"
async-trait = "0.1.86"
test-log = "0.2.17"

[features]
# By default, use reqwest with rustls
default = ["rustls"]

# Enables TLS functionality provided by rustls, while using root certificates from the rustls-native-certs crate.
rustls = ["reqwest/rustls-tls-native-roots"]

# Enables TLS functionality provided by native-tls
native-tls = ["reqwest/native-tls"]
